--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ input{
     border-radius: 30px;
     width: 400px;
     height: 50px;
+    cursor: pointer;
+    padding: initial;
 }
 .center{
     display: flex;
@@ -26,16 +28,50 @@ input{
     align-items: center;
     margin-top: 20px;
     gap: 40px;
-    background-color: grey;
     padding-left: 30px;
-    margin: 30px;   
+    margin: 30px;
+    box-sizing: border-box;   
 }
+.google{
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 1);
+    background-color:#f8f9fa;;
+    color: black;
+    border: 1px solid #dadce0;
+    text-align: center;
+
+}
+.hence{
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 1);
+    background-color:#f8f9fa ;
+    color: black;
+    border: 1px solid#dadce0 ;
+    text-align: center;
+}
+
 .offers{
-    display: flex;
+    display:flex;
     justify-content: center;
+    margin-bottom: 24px;
+    gap: 5px;
 }
-.footer{
+p.offers{
+    margin: 2px;
+}
+.bottom{
+    display: flex;
     border: 1px solid black;
-    border-top: 20px;
-    position: absolute;
+    border-bottom: 1px solid #dadce0 ;
+    font-size: 20px;
+    background-color: #f2f2f2;
+    flex-wrap: wrap;
+    color: black;
+    gap: 10px;
+}
+h3{
+    padding: 15px 30px;
+    border-bottom: 1px solid #dadce0;
+    font-size: 15px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
